fix: logo now is diff in dark mode

--- a/docs/src/css/custom.css
+++ b/docs/src/css/custom.css
@@ -95,3 +95,7 @@ html[data-theme='dark'] {
 [data-theme='light'] .eKEMWz, [data-theme='dark'] .jOwgVr, [data-theme='dark'] .eDeKjd {
   background-color: #283648;
 }
+
+html[data-theme='dark'] .navbar .navbar__logo {
+  content: url(https://assets.plan4better.de/img/logo/plan4better_white.svg)
+}
